--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
 html {
   font-size: 62.5%;
+  height: 100%;
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 56.25%;
+  }
+}
+
+@media (max-width: 425px) {
+  html {
+    font-size: 50%;
+  }
 }
 
 * {
@@ -15,6 +28,11 @@ body {
     "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   letter-spacing: 0.1px;
   font-size: 1.6rem;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 a,
@@ -25,6 +43,7 @@ a:hover {
 }
 
 header {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   padding: 15px;
@@ -32,13 +51,65 @@ header {
   color: white;
 }
 
+#footer {
+  width: 100%;
+  background-color: #e2e8f0;
+  display: flex;
+  justify-content: space-between;
+  color: #444;
+  height: 50px;
+  align-items: center;
+  padding: 0 20px;
+}
+
+#footer p a {
+  color: #9f7aea;
+}
+
+#footer .header__logo {
+  color: inherit;
+  flex: 0.15;
+}
+
+#footer .footer-links {
+  flex: 0.15;
+  display: flex;
+  justify-content: space-between;
+}
+
+#footer .footer-links a {
+  display: inline-block;
+  width: 24px;
+  margin: 0 2px;
+  color: #444;
+}
+
+@media (max-width: 425px) {
+  #footer {
+    flex-direction: column;
+    height: 80px;
+  }
+}
+
 .login-container,
 .signup-container {
   width: 400px;
-  margin: 40px auto;
+  /* margin: 0 auto; */
   background-color: #e2e8f0;
   padding: 25px;
   border-radius: 3px;
+}
+
+@media (max-width: 425px) {
+  .main--login,
+  .main--signup {
+    width: 100%;
+  }
+  .login-container,
+  .signup-container {
+    width: 100%;
+    margin: auto;
+  }
 }
 
 .login-container input,
@@ -112,24 +183,54 @@ h2 {
 }
 
 .hero {
-  margin: 100px auto;
+  margin: 0 auto;
   width: 80%;
+  /* height: 100%; */
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
+@media (max-width: 1024px) {
+  .hero {
+    margin: 5rem auto;
+    width: 85%;
+  }
+}
+
 .hero__text {
-  flex: 0.7;
+  /* flex: 0.7; */
+  width: 50%;
   padding: 30px;
 }
 
 .hero__image {
-  width: 500px;
-  height: 400px;
+  /* flex: 0.3; */
+  width: 40%;
   background-color: #aaa;
 }
 
+@media (max-width: 768px) {
+  .hero {
+    flex-direction: column;
+    width: 90%;
+    margin: 3rem auto;
+    justify-content: flex-start;
+  }
+  .hero__text {
+    width: 100%;
+    padding: 25px;
+  }
+  .hero__image {
+    width: 60%;
+  }
+}
+
+@media (max-width: 425px) {
+  .hero__text {
+    padding: 15px;
+  }
+}
 .hero__image img {
   width: 100%;
   height: 100%;
@@ -144,7 +245,7 @@ h2 {
 .hero__paragraph {
   margin: 10px 0;
   text-indent: 5%;
-  text-align: justify;
+  /* text-align: justify; */
 }
 
 .btn,
@@ -217,27 +318,24 @@ h2 {
 
 #main--quiz {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: flex-start;
-  padding: 50px 30px;
+  padding: 50px 40px;
 }
 
 .quiz__container {
   /* width: 60%; */
-  flex: 0.7;
+  flex: 0.6;
   padding: 10px;
 }
 
 .quiz__leaderboard {
-  flex: 0.3;
+  flex: 0.4;
   text-align: center;
 }
 
 .quiz__container,
 .quiz__leaderboard {
-  margin: 0 20px;
-  border-radius: 3px;
-  /* border: 1px solid #666; */
   padding: 30px 40px;
 }
 
@@ -265,6 +363,8 @@ h2 {
   border-radius: 4px;
   overflow: hidden;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+  table-layout: fixed;
+  font-size: 0.95em;
 }
 
 .leaderboard__table thead {
@@ -277,7 +377,15 @@ h2 {
 
 .leaderboard__table th,
 .leaderboard__table td {
-  padding: 10px 20px;
+  padding: 8px 15px;
+}
+.quiz__leaderboard th:first-child,
+.quiz__leaderboard th:last-child {
+  width: 25%;
+}
+.main__leaderboard th:first-child,
+.main__leaderboard th:last-child {
+  width: 18%;
 }
 
 .leaderboard__table tbody tr {
@@ -296,10 +404,44 @@ h2 {
   border-bottom: 2px solid #9f7aea;
 }
 
+@media (max-width: 1024px) {
+  #main--quiz {
+    padding: 30px 15px;
+  }
+}
+
+@media (max-width: 768px) {
+  #main--quiz {
+    flex-direction: column;
+    padding: 0;
+  }
+}
+
+@media (max-width: 425px) {
+  .quiz__container,
+  .quiz__leaderboard {
+    padding: 20px 15px;
+  }
+  .leaderboard__table th,
+  .leaderboard__table td {
+    padding: 7px;
+  }
+}
+
 .main__leaderboard {
   text-align: center;
   width: 80%;
   margin: 30px auto;
+}
+
+@media (max-width: 425px) {
+  .main__leaderboard {
+    width: 100%;
+    margin: 0;
+  }
+  .main__leaderboard .leaderboard__table {
+    text-align: left;
+  }
 }
 .leaderboard__pagelink,
 .leaderboard__pagelink:visited {
